# finplan

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  pyproject.toml
src/finplan/: __init__.py  _ss_thresholds.py  _tax_tables.py  accounts.py  models.py  montecarlo.py  results.py  returns.py  simulation.py  taxes.py  withdrawal.py
src/finplan/tests/: test_smoke.py
tests/: test_accounts.py  test_benchmark.py  test_montecarlo.py  test_returns.py  test_simulation.py  test_taxes.py  test_withdrawal.py
